# sel_server

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  openapi.json  sel_server.json  setup.cfg
.github/workflows/: docker-image.yml  documentation.yml
docs/: sel_server.json
scripts/: elastic.py
sel_server/: exceptions.py  response_models.py  routes.py  starter.py
tests/: #test_routes.py#  Dockerfile.test  docker-compose.add_volumes.yml  docker-compose.yml  test_routes.py
